--- a/src/app/components/checkbox/checkbox.component.scss
+++ b/src/app/components/checkbox/checkbox.component.scss
@@ -17,17 +17,8 @@ mat-grid-tile{
     padding-bottom: 1rem;
   };
   
-  mat-grid-tile[colspan="1"] mat-card-content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 1rem;
-    min-height: 15rem;
-  }
-  
-  mat-grid-tile[colspan="2"] mat-card-content {
-    padding: 6.5rem 1rem 6.5rem 1rem;
-  
+
+  .card-content-code mat-card-content{
+
+   padding-top: 1rem;
   }
