--- a/src/app/components/datepicker/datepicker.component.scss
+++ b/src/app/components/datepicker/datepicker.component.scss
@@ -17,17 +17,10 @@ mat-card-header{
     padding-bottom: 1rem;
 };
 
-mat-grid-tile[colspan="1"] mat-card-content {
+mat-grid-tile mat-card-content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     justify-content: center;
-    align-items: center;
-    padding-bottom: 1rem;
-    min-height: 10rem;
+    padding-bottom: 10rem;
+    padding-top: 1rem;
 }
-
-// mat-grid-tile[colspan="2"] mat-card-content {
-//     padding: 6.5rem 1rem 6.5rem 1rem;
-
-// }
