--- a/src/app/components/badge/badge.component.html
+++ b/src/app/components/badge/badge.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="5" rowHeight="80rem" role="list" >
+<mat-grid-list cols="5" rowHeight="85rem" role="list" >
 
     <mat-grid-tile colspan="1" ></mat-grid-tile>
 
@@ -82,7 +82,7 @@
                 <mat-card-title>Badge</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content style="min-height: 10rem; padding-top: 1rem">
+            <mat-card-content style=" padding-top: 1rem">
                 <mat-accordion>
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
@@ -116,7 +116,7 @@
                     <mat-card-title>Badge with colors</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content style="min-height: 10rem; padding-top: 1rem">
+            <mat-card-content style=" padding-top: 1rem">
                 <mat-accordion>
                         <mat-expansion-panel>
                           <mat-expansion-panel-header>
@@ -150,7 +150,7 @@
                 <mat-card-title>Badge sizes</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content style="min-height: 10rem; padding-top: 1rem">
+            <mat-card-content style="padding-top: 1rem">
                 <mat-accordion>
                             <mat-expansion-panel>
                               <mat-expansion-panel-header>
@@ -184,7 +184,7 @@
                 <mat-card-title>Badge position</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content style="min-height: 15rem; padding-top: 1rem">
+            <mat-card-content style="padding-top: 1rem; padding-bottom: 12rem;">
                 <mat-accordion>
                                 <mat-expansion-panel>
                                   <mat-expansion-panel-header>
@@ -218,7 +218,7 @@
                 <mat-card-title>Badge binded to value</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content style="min-height: 10rem; padding-top: 1rem">
+            <mat-card-content style=" padding-top: 1rem">
                 <mat-accordion>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
