--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -56,9 +56,9 @@
     </mat-sidenav>
   
     <mat-sidenav-content >
-      <div *ngIf="!element">Show this while nothing is chosen</div>
-      <ng-container *ngComponentOutlet="(element)" ></ng-container>
-
+      <!-- <div *ngIf="!element">Show this while nothing is chosen</div>
+      <ng-container *ngComponentOutlet="(element)" ></ng-container> -->
+<app-badge></app-badge>
     </mat-sidenav-content>
   
 </mat-sidenav-container>
