--- a/src/app/components/badge/badge.component.scss
+++ b/src/app/components/badge/badge.component.scss
@@ -26,3 +26,7 @@ mat-grid-tile[colspan="1"] mat-card-content {
     padding-bottom: 1rem;
     min-height: 10rem;
 }
+
+mat-grid-tile[colspan="2"] mat-card-content {
+    padding-bottom: 7rem;
+}
