styled: chips, progressbar, progressspinner

--- a/src/app/components/chips/chips-component/chips.component.html
+++ b/src/app/components/chips/chips-component/chips.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="9" rowHeight="114rem" role="list" >
+<mat-grid-list cols="9" rowHeight="120rem" role="list" >
 
     <mat-grid-tile colspan="1"></mat-grid-tile>
 
@@ -15,6 +15,8 @@
                 </mat-chip-listbox>
             </mat-card-content>
 
+            <mat-divider></mat-divider>
+
             <mat-card-header>Stacked chips (vertical)</mat-card-header>
             <mat-divider></mat-divider>
             <mat-card-content style="width: 50%; margin: 0 auto">
@@ -24,6 +26,8 @@
                     </mat-chip-option>
                 </mat-chip-listbox>
             </mat-card-content>
+
+            <mat-divider></mat-divider>
 
             <mat-card-header>Chips Drag and Drop</mat-card-header>
             <mat-divider></mat-divider>
@@ -41,6 +45,8 @@
                     </mat-chip>
                 </mat-chip-set>
             </mat-card-content>
+
+            <mat-divider></mat-divider>
 
             <mat-card-header>Chips with input</mat-card-header>
             <mat-divider></mat-divider>
@@ -67,6 +73,8 @@
                 </mat-form-field>
             </mat-card-content>
 
+            <mat-divider></mat-divider>
+
             <mat-card-header>Chips with avatar</mat-card-header>
             <mat-divider></mat-divider>
             <mat-card-content style="padding-bottom: 3.3rem">
@@ -86,12 +94,13 @@
                   </mat-chip-listbox>
             </mat-card-content>
 
+            <mat-divider></mat-divider>
 
             <app-chips-with-autocomplete></app-chips-with-autocomplete>
 
+            <mat-divider></mat-divider>
+
             <app-chips-with-form-control-and-buttons></app-chips-with-form-control-and-buttons>
-
-
 
         </mat-card>
     </mat-grid-tile>
@@ -100,7 +109,7 @@
         <mat-card>
             <mat-card-header>Chips basics (horizontal)</mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content style="padding-top: 4.2rem">
+            <mat-card-content style="padding: 1rem 1rem 4.1rem 1rem">
                 <mat-accordion>
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
@@ -120,9 +129,11 @@
                 </mat-accordion>
             </mat-card-content>
             
+            <mat-divider></mat-divider>
+
             <mat-card-header>Stacked chips (vertical)</mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content style="padding: 4rem 1rem 5rem 1rem">
+            <mat-card-content style="padding: 1rem 1rem 8rem 1rem">
                 <mat-accordion>
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
@@ -142,6 +153,8 @@
                 </mat-accordion>
             </mat-card-content>
   
+            <mat-divider></mat-divider>
+
             <mat-card-header>Chips Drag and Drop</mat-card-header>
             <mat-divider></mat-divider>
             <mat-card-content style="padding: 2rem 1rem 2rem 1rem">
@@ -180,13 +193,11 @@
                         </ng-template>
                         </mat-tab>
                       </mat-tab-group>
-
-
-                          
                     </mat-expansion-panel>
                 </mat-accordion>
             </mat-card-content>
         
+            <mat-divider></mat-divider>
 
             <mat-card-header style="padding: 1rem">Chips with input</mat-card-header>
             <mat-divider></mat-divider>
@@ -229,9 +240,11 @@
                 </mat-accordion>
             </mat-card-content>
 
-            <mat-card-header style="padding-top: .9rem">Chips with avatar</mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+
+            <mat-card-header style="padding-top: 1rem;">Chips with avatar</mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content style="padding-bottom: 3rem">
                 <mat-accordion>
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
@@ -251,10 +264,11 @@
                 </mat-accordion>
             </mat-card-content>
 
-
-            <mat-card-header style="padding: 2.5rem 2rem 1.5rem 2rem">Chips with autocomplete</mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content >
+
+            <mat-card-header>Chips with autocomplete</mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content style="padding-bottom: 5rem">
                 <mat-accordion>
                   <mat-expansion-panel>
                     <mat-expansion-panel-header>
@@ -293,8 +307,9 @@
               </mat-accordion>
             </mat-card-content>
 
+            <mat-divider></mat-divider>
 
-            <mat-card-header style="padding: 4.5rem 2rem 1.5rem 2rem">Chips with form control + buttons</mat-card-header>
+            <mat-card-header style="padding: 1rem">Chips with form control + buttons</mat-card-header>
             <mat-divider></mat-divider>
             <mat-card-content >
                 <mat-accordion>
@@ -334,10 +349,6 @@
                   </mat-expansion-panel>
               </mat-accordion>
             </mat-card-content>
-
-
-
-
 
         </mat-card>
         
