--- a/src/app/components/progressbar/progressbar.component.html
+++ b/src/app/components/progressbar/progressbar.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="6" rowHeight="100rem" role="list" >
+<mat-grid-list cols="6" rowHeight="130rem" role="list" >
 
     <mat-grid-tile colspan="1" ></mat-grid-tile>
 
@@ -8,7 +8,7 @@
                 <mat-card-title>Query progress-bar</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="padding-bottom: 5.7rem">
                 <mat-progress-bar mode="query"></mat-progress-bar>
             </mat-card-content>
 
@@ -17,7 +17,7 @@
                 <mat-card-title>Indeterminate progress-bar</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="padding-bottom: 5.7rem">
                 <mat-progress-bar mode="indeterminate"></mat-progress-bar>
             </mat-card-content>
 
@@ -26,7 +26,7 @@
                 <mat-card-title>Determinate progress-bar</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="padding-bottom: 5.7rem">
                 <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
             </mat-card-content>
 
@@ -35,7 +35,7 @@
                 <mat-card-title>Buffer progress-bar</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="padding-bottom: 5.7rem">
                 <mat-progress-bar mode="buffer"></mat-progress-bar>
             </mat-card-content>
 
