--- a/src/app/components/progressspinner/progressspinner.component.html
+++ b/src/app/components/progressspinner/progressspinner.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="6" rowHeight="100rem" role="list" >
+<mat-grid-list cols="6" rowHeight="90rem" role="list" >
 
     <mat-grid-tile colspan="1" ></mat-grid-tile>
 
@@ -86,7 +86,7 @@
                 <mat-card-title>Basic progress-spinner</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="padding-bottom: 6.3rem;">
 
                 <mat-accordion>
                     <mat-expansion-panel>
@@ -113,7 +113,7 @@
                 <mat-card-title>Determinate progress-spinner</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="padding-bottom: 6.3rem;">
 
                 <mat-accordion>
                     <mat-expansion-panel>
