--- a/src/app/components/progressspinner/progressspinner.component.scss
+++ b/src/app/components/progressspinner/progressspinner.component.scss
@@ -17,18 +17,7 @@ mat-card-header{
     padding-bottom: 1rem;
 };
 
-mat-grid-tile[colspan="1"] mat-card-content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 1rem;
-    min-height: 10rem;
-}
-
-mat-grid-tile[colspan="2"] mat-card-content {
-    min-height: 6.5rem;
-    padding: 3rem;
+ mat-card-content {
+    padding: 1rem 1rem 3rem 1rem;
 
 }
