--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -44,6 +44,15 @@
             <mat-list-item>
                 <button mat-button class="navButton" (click)="showElement('datepicker')"><h3>Datepicker</h3></button>
             </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('radiobutton')"><h3>Radio buttons</h3></button>
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('formfield')"><h3>Form fields</h3></button>
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('paginator')"><h3>Paginator</h3></button>
+            </mat-list-item>
 
             <!-- 
             <mat-list-item>
@@ -58,7 +67,8 @@
     <mat-sidenav-content >
       <div *ngIf="!element">Show this while nothing is chosen</div>
       <ng-container *ngComponentOutlet="(element)" ></ng-container>
-      
+
+
     </mat-sidenav-content>
   
 </mat-sidenav-container>
