--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,1 +1,263 @@
-<p>menu works!</p>
+<mat-grid-list cols="7" rowHeight="120rem" role="list" >
+
+    <mat-grid-tile colspan="1" ></mat-grid-tile>
+
+    <mat-grid-tile role="listitem" colspan="2" >
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Basic menu</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+
+                <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item>Item 1</button>
+                  <button mat-menu-item>Item 2</button>
+                </mat-menu>
+
+            </mat-card-content>
+
+            <mat-divider></mat-divider>
+
+            <mat-card-header>
+                <mat-card-title>Menu positioning</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+
+                <button mat-button [matMenuTriggerFor]="aboveMenu">Above</button>
+                <mat-menu #aboveMenu="matMenu" yPosition="above">
+                    <button mat-menu-item>Item 1</button>
+                    <button mat-menu-item>Item 2</button>
+                </mat-menu>
+
+                <button mat-button [matMenuTriggerFor]="belowMenu">Below</button>
+                <mat-menu #belowMenu="matMenu" yPosition="below">
+                    <button mat-menu-item>Item 1</button>
+                    <button mat-menu-item>Item 2</button>
+                </mat-menu>
+
+                <button mat-button [matMenuTriggerFor]="beforeMenu">Before</button>
+                <mat-menu #beforeMenu="matMenu" xPosition="before">
+                    <button mat-menu-item>Item 1</button>
+                    <button mat-menu-item>Item 2</button>
+                </mat-menu>
+
+
+                <button mat-button [matMenuTriggerFor]="afterMenu">After</button>
+                <mat-menu #afterMenu="matMenu" xPosition="after">
+                    <button mat-menu-item>Item 1</button>
+                    <button mat-menu-item>Item 2</button>
+                </mat-menu>
+                
+            </mat-card-content>
+
+            <mat-divider></mat-divider>
+
+            <mat-card-header>
+                <mat-card-title>Menu with icons</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+
+                <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                    <mat-icon>more_vert</mat-icon>
+                  </button>
+                  <mat-menu #menu="matMenu">
+                    <button mat-menu-item>
+                      <mat-icon>dialpad</mat-icon>
+                      <span>Redial</span>
+                    </button>
+                    <button mat-menu-item disabled>
+                      <mat-icon>voicemail</mat-icon>
+                      <span>Check voice mail</span>
+                    </button>
+                    <button mat-menu-item>
+                      <mat-icon>notifications_off</mat-icon>
+                      <span>Disable alerts</span>
+                    </button>
+                  </mat-menu>
+
+            </mat-card-content>
+
+            <mat-divider></mat-divider>
+
+            <mat-card-header>
+                <mat-card-title>Nested menu</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+
+                <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+                <mat-menu #menu="matMenu">
+                <button mat-menu-item>Item 1</button>
+                <button mat-menu-item>Item 2</button>
+                </mat-menu>
+
+            </mat-card-content>
+
+      </mat-card>
+   </mat-grid-tile>
+
+   <mat-grid-tile role="listitem" colspan="3">
+    <mat-card>
+
+        <mat-card-header>
+        <mat-card-title>Basic Menu</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content style="padding-bottom: 5.25rem">
+
+            <mat-accordion>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        See source code + explanation
+                    </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                        <mat-tab label="HTML">
+                        <ng-template matTabContent>
+                            <ngx-codemirror
+                                [(ngModel)]="BasicMenu"
+                                [options]="{
+                                lineNumbers: true,
+                                theme: 'material',
+                                mode: 'markdown'
+                                }"
+                            ></ngx-codemirror>
+                        </ng-template>
+                        </mat-tab>
+                        <mat-tab label="Explanations template">
+                            <ng-template matTabContent>
+                            please write 
+                            </ng-template>
+                        </mat-tab>
+                    </mat-tab-group>
+                </mat-expansion-panel>
+            </mat-accordion>
+        </mat-card-content>
+
+        <mat-divider></mat-divider>
+
+        <mat-card-header>
+        <mat-card-title>Menu positioning</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content style="padding-bottom: 12rem">
+    
+                <mat-accordion>
+                    <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                        See source code + explanation
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                        <mat-tab label="HTML">
+                            <ng-template matTabContent>
+                                <ngx-codemirror
+                                [(ngModel)]="MenuPositioning"
+                                [options]="{
+                                lineNumbers: true,
+                                theme: 'material',
+                                mode: 'markdown'
+                                }"
+                                ></ngx-codemirror>
+                            </ng-template>
+                        </mat-tab>
+                        <mat-tab label="Explanations template">
+                            <ng-template matTabContent>
+                                please write 
+                            </ng-template>
+                        </mat-tab>
+                        </mat-tab-group>
+                    </mat-expansion-panel>
+                </mat-accordion>
+        </mat-card-content>
+
+        <mat-divider></mat-divider>
+
+        <mat-card-header>
+        <mat-card-title>Menu with icons</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content style="padding-bottom: 6rem">
+        
+                    <mat-accordion>
+                        <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                            See source code + explanation
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                            <mat-tab label="HTML">
+                                <ng-template matTabContent>
+                                    <ngx-codemirror
+                                    [(ngModel)]="MenuWithIcons"
+                                    [options]="{
+                                    lineNumbers: true,
+                                    theme: 'material',
+                                    mode: 'markdown'
+                                    }"
+                                    ></ngx-codemirror>
+                                </ng-template>
+                            </mat-tab>
+                            <mat-tab label="Explanations template">
+                                <ng-template matTabContent>
+                                    please write 
+                                </ng-template>
+                            </mat-tab>
+                            </mat-tab-group>
+                        </mat-expansion-panel>
+                    </mat-accordion>
+        </mat-card-content>
+
+        <mat-divider></mat-divider>
+
+        <mat-card-header>
+        <mat-card-title>Nested menu</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+            
+                        <mat-accordion>
+                            <mat-expansion-panel>
+                            <mat-expansion-panel-header>
+                                <mat-panel-title>
+                                See source code + explanation
+                                </mat-panel-title>
+                            </mat-expansion-panel-header>
+                            <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+                                <mat-tab label="HTML">
+                                    <ng-template matTabContent>
+                                        <ngx-codemirror
+                                        [(ngModel)]="NestedMenu"
+                                        [options]="{
+                                        lineNumbers: true,
+                                        theme: 'material',
+                                        mode: 'markdown'
+                                        }"
+                                        ></ngx-codemirror>
+                                    </ng-template>
+                                </mat-tab>
+                                <mat-tab label="Explanations template">
+                                    <ng-template matTabContent>
+                                        please write 
+                                    </ng-template>
+                                </mat-tab>
+                                </mat-tab-group>
+                            </mat-expansion-panel>
+                        </mat-accordion>
+        </mat-card-content>
+
+    </mat-card>
+    </mat-grid-tile>
+
+
+    <mat-grid-tile colspan="1" ></mat-grid-tile>
+
+
+</mat-grid-list>
