--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -77,6 +77,9 @@
             <mat-list-item>
                 <button mat-button class="navButton" (click)="showElement('slidetoggle')"><h3>Slide Toggle</h3></button>
             </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('table')"><h3>Table</h3></button>
+            </mat-list-item>
 
             <!-- 
             <mat-list-item>
@@ -89,9 +92,9 @@
     </mat-sidenav>
   
     <mat-sidenav-content >
-      <div *ngIf="!element">Show this while nothing is chosen</div>
-      <ng-container *ngComponentOutlet="(element)" ></ng-container>
-
+      <!-- <div *ngIf="!element">Show this while nothing is chosen</div>
+      <ng-container *ngComponentOutlet="(element)" ></ng-container> -->
+<app-table></app-table>
 
     </mat-sidenav-content>
   
