--- a/src/app/components/table/table/table.component.html
+++ b/src/app/components/table/table/table.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="5" rowHeight="500rem" role="list" >
+<mat-grid-list cols="5" rowHeight="1000rem" role="list" >
 
     <mat-grid-tile colspan="1" ></mat-grid-tile>
 
@@ -347,13 +347,144 @@
           </mat-card-content>
 
           <mat-divider></mat-divider>
+         
+          <mat-card-header>
+            <mat-card-title>Table with a sticky footer</mat-card-title>
+          </mat-card-header>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <section class="example-container mat-elevation-z8" tabindex="0">
+              <table mat-table [dataSource]="transactions">
+                <!-- Item Column -->
+                <ng-container matColumnDef="item">
+                  <th mat-header-cell *matHeaderCellDef> Item </th>
+                  <td mat-cell *matCellDef="let transaction"> {{transaction.item}} </td>
+                  <td mat-footer-cell *matFooterCellDef> Total </td>
+                </ng-container>
+            
+                <!-- Cost Column -->
+                <ng-container matColumnDef="cost">
+                  <th mat-header-cell *matHeaderCellDef> Cost </th>
+                  <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
+                  <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
+                </ng-container>
+            
+                <tr mat-header-row *matHeaderRowDef="displayedColumns5"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns5;"></tr>
+                <tr mat-footer-row *matFooterRowDef="displayedColumns5; sticky: true"></tr>
+              </table>
+            </section>
+          </mat-card-content>
 
+          <mat-divider></mat-divider>
 
+          <mat-card-header>
+            <mat-card-title>Table with sticky header</mat-card-title>
+          </mat-card-header>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <section class="example-container mat-elevation-z8" tabindex="0">
+              <table mat-table [dataSource]="dataSource8">
+            
+                <!-- Position Column -->
+                <ng-container matColumnDef="position">
+                  <th mat-header-cell *matHeaderCellDef> No. </th>
+                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                </ng-container>
+            
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef> Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+            
+                <!-- Weight Column -->
+                <ng-container matColumnDef="weight">
+                  <th mat-header-cell *matHeaderCellDef> Weight </th>
+                  <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                </ng-container>
+            
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="symbol">
+                  <th mat-header-cell *matHeaderCellDef> Symbol </th>
+                  <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                </ng-container>
+            
+                <tr mat-header-row *matHeaderRowDef="displayedColumns8; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns8;"></tr>
+              </table>
+            </section>
+          </mat-card-content>
 
+          <mat-divider></mat-divider>
 
+          <mat-card-header>
+            <mat-card-title>Use of 'mat-text-column' with various configurations of the interface.</mat-card-title>
+          </mat-card-header>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <table mat-table [dataSource]="dataSource9" class="mat-elevation-z8">
+              <mat-text-column name="position" [headerText]="headerText"></mat-text-column>
+            
+              <!-- Change the header text. -->
+              <mat-text-column name="name" headerText="Element"></mat-text-column>
+            
+              <!-- Provide a data accessor for getting the cell text values. -->
+              <mat-text-column name="weight" [dataAccessor]="getWeight"></mat-text-column>
+            
+              <!-- Justify the content of the cells to the cell end. -->
+              <mat-text-column name="symbol" justify="end"></mat-text-column>
+            
+              <tr mat-header-row *matHeaderRowDef="displayedColumns9"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns9;"></tr>
+            </table>
+          </mat-card-content>
 
+          <mat-divider></mat-divider>
 
-      </mat-card>
+          <mat-card-header>
+            <mat-card-title>Use of `mat-text-column` which can be used for simple columns that only need to display a text value for the header and cells.</mat-card-title>
+          </mat-card-header>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <table mat-table [dataSource]="dataSource10" class="mat-elevation-z8">
+              <mat-text-column name="position"></mat-text-column>
+              <mat-text-column name="name"></mat-text-column>
+              <mat-text-column name="weight"></mat-text-column>
+              <mat-text-column name="symbol"></mat-text-column>
+            
+              <tr mat-header-row *matHeaderRowDef="displayedColumns10"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns10;"></tr>
+            </table>
+          </mat-card-content>
+
+          <app-adding-removing-array-based-datasource></app-adding-removing-array-based-datasource>
+
+          <app-adding-removing-data-observable-based-datasource></app-adding-removing-data-observable-based-datasource>
+
+          <app-table-with-expandable-rows></app-table-with-expandable-rows>
+
+          <app-table-with-columns-defined-usingng-for></app-table-with-columns-defined-usingng-for>
+
+          <app-table-retrieving-data-through-http></app-table-retrieving-data-through-http>
+
+          <app-data-table-with-sorting-pagination-filtering></app-data-table-with-sorting-pagination-filtering>
+       
+          <app-table-with-pagination></app-table-with-pagination>
+
+          <app-table-with-re-orderable-columns></app-table-with-re-orderable-columns>
+
+          <app-table-with-selection></app-table-with-selection>
+
+          <app-table-with-sorting></app-table-with-sorting>
+
+          <app-table-wrap-a-table-component-definition-behavior-reuse></app-table-wrap-a-table-component-definition-behavior-reuse>
+
+          <app-tables-with-toggle-able-sticky-headers-footers-and-columns></app-tables-with-toggle-able-sticky-headers-footers-and-columns>
+      
+          <app-flex-tables-with-toggle-able-sticky-headers-footers-and-columns></app-flex-tables-with-toggle-able-sticky-headers-footers-and-columns>
+        
+        </mat-card>
    </mat-grid-tile>
 
 </mat-grid-list>
