--- a/src/app/components/table/table/table.component.scss
+++ b/src/app/components/table/table/table.component.scss
@@ -13,102 +13,17 @@ mat-grid-tile{
   mat-card-header{
     display: inline-block;
     text-align: center;
-    padding-bottom: 1rem;
+    padding: 1.5rem;
   };
   
-  mat-grid-tile[colspan="1"] mat-card-content {
+  mat-grid-tile[colspan="10"] mat-card-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     justify-content: center;
-    align-items: center;
-    padding-bottom: 1rem;
-    min-height: 15rem;
+    padding: 4rem 1rem 4rem 1rem;
   }
   
-  mat-grid-tile[colspan="2"] mat-card-content {
-    padding: 6.5rem 1rem 6.5rem 1rem;
-  
+  button {
+    max-width: 5rem;
   }
-
-//   .mat-mdc-table {
-//     width: 100%;
-//     max-height: 500px;
-//     overflow: auto;
-//   }
-  
-//   .mat-column-name {
-//     height: 100px;
-//   }
-
-//   /* Structure */
-// .example-container {
-//   position: relative;
-// }
-
-// .example-table-container {
-//   position: relative;
-//   min-height: 200px;
-//   max-height: 400px;
-//   overflow: auto;
-// }
-
-// table {
-//   width: 100%;
-// }
-
-// .example-loading-shade {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   bottom: 56px;
-//   right: 0;
-//   background: rgba(0, 0, 0, 0.15);
-//   z-index: 1;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
-
-// .example-rate-limit-reached {
-//   max-width: 360px;
-//   text-align: center;
-// }
-
-// /* Column Widths */
-// .mat-column-number,
-// .mat-column-state {
-//   max-width: 64px;
-// }
-
-// .mat-column-created {
-//   max-width: 124px;
-// }
-
-// .example-container {
-//   height: 400px;
-//   width: 550px;
-//   max-width: 100%;
-//   overflow: auto;
-// }
-
-// table {
-//   width: 800px;
-// }
-
-// td.mat-column-star {
-//   width: 20px;
-//   padding-right: 8px;
-// }
-
-// th.mat-column-position, td.mat-column-position {
-//   padding-left: 8px;
-// }
-
-// .mat-mdc-table-sticky-border-elem-right {
-//   border-left: 1px solid #e0e0e0;
-// }
-
-// .mat-mdc-table-sticky-border-elem-left {
-//   border-right: 1px solid #e0e0e0;
-// }
